@@ -1,3 +1,5 @@
+- optional new param InDir to be "current dir"
+
 2.002 2020-08-17
 - get_target renamed to correct "has_target"
 
